--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 response.textContent = '<think>' + ai_data.think_text + '</think>' + ai_data.text;
             } catch (error) {
                 console.error('Error:', error);
-                response.textContent = "请求失败，请稍后再试。" + error;
+                response.textContent = "请求失败，请稍后再试。";
             }
         }
     </script>
